--- a/ios/Podfile
+++ b/ios/Podfile
@@ -20,6 +20,7 @@ target 'rnOnbording' do
   )
 
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   target 'rnOnbordingTests' do
     inherit! :complete
